--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,15 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My App</title>
-  <link href="/css/output.css" rel="stylesheet">
+  <title>Seafood Restaurant</title>
+  <link href="./css/output.css" rel="stylesheet">
+  <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 text-center">
-  <h1 class="text-4xl font-bold text-blue-600 mt-10">Hello, World!</h1>
-  <button id="fetchMessage" class="mt-5 px-4 py-2 bg-blue-500 text-white rounded">Fetch Message</button>
-  <p id="message" class="mt-3 text-lg text-gray-700"></p>
-  <script src="/js/main.js"></script>
+<body class="bg-gray-100 dark:bg-gray-900 dark:text-white h-full flex flex-col">
+  <!-- Touch Bar -->
+  <div class="bg-blue-600 bg-opacity-75 text-white p-4 mx-4 mt-4 rounded-lg flex justify-between items-center">
+    <div class="flex items-center space-x-4">
+      <h1 class="text-2xl font-bold">Seafood Restaurant</h1>
+      <nav class="flex space-x-4">
+        <a href="index.html" class="text-lg hover:underline">Home</a>
+        <a href="about.html" class="text-lg hover:underline">About Us</a>
+        <a href="contact.html" class="text-lg hover:underline">Contact</a>
+      </nav>
+    </div>
+    <button id="theme-toggle" class="bg-gray-200 text-black p-2 rounded dark:bg-gray-700 dark:text-white">
+        <i class='bx bx-moon'></i> Toggle Theme
+      </button>
+      
+  </div>
+
+  <!-- Navigation Buttons -->
+  <div class="flex justify-center space-x-4 mt-4">
+    <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+      <i class='bx bx-home'></i> Home
+    </a>
+    <a href="about.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+      <i class='bx bx-info-circle'></i> About Us
+    </a>
+    <a href="contact.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+      <i class='bx bx-phone'></i> Contact
+    </a>
+    <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded flex items-center">
+      <i class='bx bx-search'></i> Search
+    </button>
+    <a href="path/to/cv.pdf" download class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded flex items-center">
+      <i class='bx bx-download'></i> Download CV
+    </a>
+  </div>
+
+  <!-- Main Content -->
+  <main class="container mx-auto p-6 flex-grow">
+    <section class="mt-8">
+      <h2 class="text-4xl text-blue-600 font-semibold dark:text-blue-400 text-center">Our Specialties</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mt-8" id="card-container">
+        <!-- Card 1 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
+          <img src="./images/seafood1.webp" alt="Delicious seafood" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-semibold">Delicious Seafood</h3>
+            <p class="text-gray-700 dark:text-gray-300 mt-2">Experience the taste of fresh seafood.</p>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
+          <img src="./images/seafood2.webp" alt="Fresh seafood" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-semibold">Fresh Seafood</h3>
+            <p class="text-gray-700 dark:text-gray-300 mt-2">Enjoy our freshly caught seafood.</p>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
+          <img src="./images/seafood2.webp" alt="Restaurant interior" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-semibold">Restaurant Interior</h3>
+            <p class="text-gray-700 dark:text-gray-300 mt-2">Relax in our beautifully designed restaurant.</p>
+          </div>
+        </div>
+        <!-- Card 4 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
+          <img src="./images/seafood1.webp" alt="Delicious seafood" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-semibold">Seafood Platter</h3>
+            <p class="text-gray-700 dark:text-gray-300 mt-2">A variety of fresh seafood.</p>
+          </div>
+        </div>
+        <!-- Card 5 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
+          <img src="./images/seafood2.webp" alt="Restaurant interior" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-semibold">Gourmet Dishes</h3>
+            <p class="text-gray-700 dark:text-gray-300 mt-2">Exquisite seafood dishes.</p>
+          </div>
+        </div>
+        <!-- Card 6 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
+          <img src="./images/seafood1.webp" alt="Fresh seafood" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-semibold">Sustainable Seafood</h3>
+            <p class="text-gray-700 dark:text-gray-300 mt-2">Responsibly sourced seafood.</p>
+          </div>
+        </div>
+        <!-- Card 7 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
+          <img src="./images/seafood2.webp" alt="Delicious seafood" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-semibold">Family Friendly</h3>
+            <p class="text-gray-700 dark:text-gray-300 mt-2">A great place for family gatherings.</p>
+          </div>
+        </div>
+        <!-- Card 8 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
+          <img src="./images/seafood1.webp" alt="Restaurant interior" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-semibold">Cozy Atmosphere</h3>
+            <p class="text-gray-700 dark:text-gray-300 mt-2">Enjoy a cozy and welcoming environment.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Pagination -->
+      <div class="flex justify-center items-center mt-8 space-x-2">
+        <button id="prev" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+          <i class='bx bx-chevron-left'></i>
+        </button>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">1</button>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">2</button>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">3</button>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">4</button>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">5</button>
+        <button id="next" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+          <i class='bx bx-chevron-right'></i>
+        </button>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-blue-600 text-white p-6 mx-4 mt-4 rounded-lg text-center dark:bg-blue-800">
+    <p>&copy; 2024 Seafood Restaurant</p>
+  </footer>
+
+  <script src="./js/main.js"></script>
+  <script src="./js/theme-switcher.js"></script>
+  <script src="./js/scroll.js"></script>
 </body>
 </html>
+
+
+
