--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,33 +12,43 @@
   <div class="bg-blue-600 bg-opacity-75 text-white p-4 mx-4 mt-4 rounded-lg flex justify-between items-center">
     <div class="flex items-center space-x-4">
       <h1 class="text-2xl font-bold">Seafood Restaurant</h1>
-      <nav class="flex space-x-4">
+      <nav class="hidden md:flex space-x-4">
         <a href="index.html" class="text-lg hover:underline">Home</a>
         <a href="about.html" class="text-lg hover:underline">About Us</a>
         <a href="contact.html" class="text-lg hover:underline">Contact</a>
       </nav>
     </div>
-    <button id="theme-toggle" class="bg-gray-200 text-black p-2 rounded dark:bg-gray-700 dark:text-white">
+    <div class="flex items-center space-x-4">
+      <button id="theme-toggle" class="bg-gray-200 text-black p-2 rounded dark:bg-gray-700 dark:text-white">
         <i class='bx bx-moon'></i> Toggle Theme
       </button>
-      
+      <button id="menu-toggle" class="md:hidden bg-gray-200 text-black p-2 rounded dark:bg-gray-700 dark:text-white">
+        <i class='bx bx-menu'></i>
+      </button>
+    </div>
   </div>
+  <!-- Mobile Menu -->
+  <nav id="mobile-menu" class="hidden flex-col space-y-2 mt-4 mx-4">
+    <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
+    <a href="about.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">About Us</a>
+    <a href="contact.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Contact</a>
+  </nav>
 
   <!-- Navigation Buttons -->
-  <div class="flex justify-center space-x-4 mt-4">
-    <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+  <div class="flex justify-center flex-wrap space-x-2 mt-4">
+    <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
       <i class='bx bx-home'></i> Home
     </a>
-    <a href="about.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+    <a href="about.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
       <i class='bx bx-info-circle'></i> About Us
     </a>
-    <a href="contact.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+    <a href="contact.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
       <i class='bx bx-phone'></i> Contact
     </a>
-    <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded flex items-center">
+    <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
       <i class='bx bx-search'></i> Search
     </button>
-    <a href="path/to/cv.pdf" download class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded flex items-center">
+    <a href="path/to/cv.pdf" download class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
       <i class='bx bx-download'></i> Download CV
     </a>
   </div>
@@ -47,69 +57,69 @@
   <main class="container mx-auto p-6 flex-grow">
     <section class="mt-8">
       <h2 class="text-4xl text-blue-600 font-semibold dark:text-blue-400 text-center">Our Specialties</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mt-8" id="card-container">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mt-8 justify-items-center" id="card-container">
         <!-- Card 1 -->
-        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
-          <img src="./images/seafood1.webp" alt="Delicious seafood" class="w-full h-48 object-cover">
-          <div class="p-4">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+          <img src="./images/seafood1.webp" alt="Delicious seafood" class="w-full h-full object-cover">
+          <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
             <h3 class="text-xl font-semibold">Delicious Seafood</h3>
-            <p class="text-gray-700 dark:text-gray-300 mt-2">Experience the taste of fresh seafood.</p>
+            <p class="mt-2">Experience the taste of fresh seafood.</p>
           </div>
         </div>
         <!-- Card 2 -->
-        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
-          <img src="./images/seafood2.webp" alt="Fresh seafood" class="w-full h-48 object-cover">
-          <div class="p-4">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+          <img src="./images/seafood2.webp" alt="Fresh seafood" class="w-full h-full object-cover">
+          <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
             <h3 class="text-xl font-semibold">Fresh Seafood</h3>
-            <p class="text-gray-700 dark:text-gray-300 mt-2">Enjoy our freshly caught seafood.</p>
+            <p class="mt-2">Enjoy our freshly caught seafood.</p>
           </div>
         </div>
         <!-- Card 3 -->
-        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
-          <img src="./images/seafood2.webp" alt="Restaurant interior" class="w-full h-48 object-cover">
-          <div class="p-4">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+          <img src="./images/seafood2.webp" alt="Restaurant interior" class="w-full h-full object-cover">
+          <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
             <h3 class="text-xl font-semibold">Restaurant Interior</h3>
-            <p class="text-gray-700 dark:text-gray-300 mt-2">Relax in our beautifully designed restaurant.</p>
+            <p class="mt-2">Relax in our beautifully designed restaurant.</p>
           </div>
         </div>
         <!-- Card 4 -->
-        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
-          <img src="./images/seafood1.webp" alt="Delicious seafood" class="w-full h-48 object-cover">
-          <div class="p-4">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+          <img src="./images/seafood1.webp" alt="Delicious seafood" class="w-full h-full object-cover">
+          <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
             <h3 class="text-xl font-semibold">Seafood Platter</h3>
-            <p class="text-gray-700 dark:text-gray-300 mt-2">A variety of fresh seafood.</p>
+            <p class="mt-2">A variety of fresh seafood.</p>
           </div>
         </div>
         <!-- Card 5 -->
-        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
-          <img src="./images/seafood2.webp" alt="Restaurant interior" class="w-full h-48 object-cover">
-          <div class="p-4">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+          <img src="./images/seafood2.webp" alt="Restaurant interior" class="w-full h-full object-cover">
+          <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
             <h3 class="text-xl font-semibold">Gourmet Dishes</h3>
-            <p class="text-gray-700 dark:text-gray-300 mt-2">Exquisite seafood dishes.</p>
+            <p class="mt-2">Exquisite seafood dishes.</p>
           </div>
         </div>
         <!-- Card 6 -->
-        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
-          <img src="./images/seafood1.webp" alt="Fresh seafood" class="w-full h-48 object-cover">
-          <div class="p-4">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+          <img src="./images/seafood1.webp" alt="Fresh seafood" class="w-full h-full object-cover">
+          <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
             <h3 class="text-xl font-semibold">Sustainable Seafood</h3>
-            <p class="text-gray-700 dark:text-gray-300 mt-2">Responsibly sourced seafood.</p>
+            <p class="mt-2">Responsibly sourced seafood.</p>
           </div>
         </div>
         <!-- Card 7 -->
-        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
-          <img src="./images/seafood2.webp" alt="Delicious seafood" class="w-full h-48 object-cover">
-          <div class="p-4">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+          <img src="./images/seafood2.webp" alt="Delicious seafood" class="w-full h-full object-cover">
+          <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
             <h3 class="text-xl font-semibold">Family Friendly</h3>
-            <p class="text-gray-700 dark:text-gray-300 mt-2">A great place for family gatherings.</p>
+            <p class="mt-2">A great place for family gatherings.</p>
           </div>
         </div>
         <!-- Card 8 -->
-        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden">
-          <img src="./images/seafood1.webp" alt="Restaurant interior" class="w-full h-48 object-cover">
-          <div class="p-4">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+          <img src="./images/seafood1.webp" alt="Restaurant interior" class="w-full h-full object-cover">
+          <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
             <h3 class="text-xl font-semibold">Cozy Atmosphere</h3>
-            <p class="text-gray-700 dark:text-gray-300 mt-2">Enjoy a cozy and welcoming environment.</p>
+            <p class="mt-2">Enjoy a cozy and welcoming environment.</p>
           </div>
         </div>
       </div>
@@ -136,11 +146,20 @@
     <p>&copy; 2024 Seafood Restaurant</p>
   </footer>
 
-  <script src="./js/main.js"></script>
   <script src="./js/theme-switcher.js"></script>
   <script src="./js/scroll.js"></script>
+  <script src="./js/menu-toggle.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
 
 
 
