--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,151 +6,163 @@
   <title>Seafood Restaurant</title>
   <link href="./css/output.css" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet">
+  <style>
+    /* Стиль для полосы прокрутки */
+    ::-webkit-scrollbar {
+      width: 12px;
+      border-radius: 10px;
+    }
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #1e3a8a; /* синий цвет */
+      border-radius: 10px;
+      border: 3px solid #f1f1f1;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #1e40af; /* более темный синий цвет при наведении */
+    }
+    /* Прокрутка для Firefox */
+    * {
+      scrollbar-width: thin;
+      scrollbar-color: #1e3a8a #f1f1f1;
+    }
+    body {
+      scrollbar-width: thin;
+      scrollbar-color: #1e3a8a #f1f1f1;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 dark:text-white h-full flex flex-col">
-  <!-- Touch Bar -->
-  <div class="bg-blue-600 bg-opacity-75 text-white p-4 mx-4 mt-4 rounded-lg flex justify-between items-center">
-    <div class="flex items-center space-x-4">
-      <h1 class="text-2xl font-bold">Seafood Restaurant</h1>
-      <nav class="hidden md:flex space-x-4">
-        <a href="index.html" class="text-lg hover:underline">Home</a>
-        <a href="about.html" class="text-lg hover:underline">About Us</a>
-        <a href="contact.html" class="text-lg hover:underline">Contact</a>
-      </nav>
-    </div>
-    <div class="flex items-center space-x-4">
-      <button id="theme-toggle" class="bg-gray-200 text-black p-2 rounded dark:bg-gray-700 dark:text-white">
-        <i class='bx bx-moon'></i> Toggle Theme
-      </button>
-      <button id="menu-toggle" class="md:hidden bg-gray-200 text-black p-2 rounded dark:bg-gray-700 dark:text-white">
+<body class="bg-gray-100 dark:bg-gray-900 dark:text-white h-full flex flex-col overflow-hidden">
+  <!-- Fixed top menu -->
+  <div class="fixed top-4 left-4 right-4 bg-gray-200 bg-opacity-75 dark:bg-gray-700 dark:bg-opacity-75 p-4 flex justify-between items-center rounded-full z-10">
+    <a href="index.html" class="w-10 h-10 bg-blue-600 bg-opacity-75 text-white rounded-full flex items-center justify-center">
+      <i class='bx bx-home text-2xl'></i>
+    </a>
+    <div class="flex space-x-4">
+      <a href="https://t.me/your-telegram-link" target="_blank" class="w-10 h-10 bg-blue-600 bg-opacity-75 text-white rounded-full flex items-center justify-center">
+        <i class='bx bxl-telegram text-2xl'></i>
+      </a>
+      <a href="https://instagram.com/your-instagram-link" target="_blank" class="w-10 h-10 bg-pink-600 bg-opacity-75 text-white rounded-full flex items-center justify-center">
+        <i class='bx bxl-instagram text-2xl'></i>
+      </a>
+      <button id="menu-toggle" class="w-10 h-10 md:hidden bg-gray-200 bg-opacity-75 text-black rounded-full flex items-center justify-center dark:bg-gray-700 dark:bg-opacity-75 dark:text-white">
         <i class='bx bx-menu'></i>
       </button>
+      <button id="theme-toggle" class="w-10 h-10 bg-gray-200 bg-opacity-75 text-black rounded-full flex items-center justify-center dark:bg-gray-700 dark:bg-opacity-75 dark:text-white">
+        <i id="theme-icon" class='bx bx-moon text-2xl'></i> 
+      </button>
     </div>
-  </div>
-  <!-- Mobile Menu -->
-  <nav id="mobile-menu" class="hidden flex-col space-y-2 mt-4 mx-4">
-    <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
-    <a href="about.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">About Us</a>
-    <a href="contact.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Contact</a>
-  </nav>
-
-  <!-- Navigation Buttons -->
-  <div class="flex justify-center flex-wrap space-x-2 mt-4">
-    <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
-      <i class='bx bx-home'></i> Home
-    </a>
-    <a href="about.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
-      <i class='bx bx-info-circle'></i> About Us
-    </a>
-    <a href="contact.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
-      <i class='bx bx-phone'></i> Contact
-    </a>
-    <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
-      <i class='bx bx-search'></i> Search
-    </button>
-    <a href="path/to/cv.pdf" download class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded flex items-center m-1">
-      <i class='bx bx-download'></i> Download CV
-    </a>
   </div>
 
   <!-- Main Content -->
-  <main class="container mx-auto p-6 flex-grow">
-    <section class="mt-8">
-      <h2 class="text-4xl text-blue-600 font-semibold dark:text-blue-400 text-center">Our Specialties</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mt-8 justify-items-center" id="card-container">
+  <main class="container mx-auto p-6 flex-grow mt-16 sm:mt-32 overflow-y-auto">
+    <section class="mt-4">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mt-8 justify-items-center card-container" id="card-container">
         <!-- Card 1 -->
-        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96 transform transition duration-300 hover:scale-105">
           <img src="./images/seafood1.webp" alt="Delicious seafood" class="w-full h-full object-cover">
           <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
-            <h3 class="text-xl font-semibold">Delicious Seafood</h3>
-            <p class="mt-2">Experience the taste of fresh seafood.</p>
+            <a href="about.html#delicious-seafood" class="block transition duration-300">
+              <h3 class="text-xl font-semibold">Delicious Seafood</h3>
+              <p class="mt-2">Experience the taste of fresh seafood.</p>
+            </a>
           </div>
         </div>
         <!-- Card 2 -->
-        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96 transform transition duration-300 hover:scale-105">
           <img src="./images/seafood2.webp" alt="Fresh seafood" class="w-full h-full object-cover">
           <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
-            <h3 class="text-xl font-semibold">Fresh Seafood</h3>
-            <p class="mt-2">Enjoy our freshly caught seafood.</p>
+            <a href="about.html#fresh-seafood" class="block transition duration-300">
+              <h3 class="text-xl font-semibold">Fresh Seafood</h3>
+              <p class="mt-2">Enjoy our freshly caught seafood.</p>
+            </a>
           </div>
         </div>
         <!-- Card 3 -->
-        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96 transform transition duration-300 hover:scale-105">
           <img src="./images/seafood2.webp" alt="Restaurant interior" class="w-full h-full object-cover">
           <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
-            <h3 class="text-xl font-semibold">Restaurant Interior</h3>
-            <p class="mt-2">Relax in our beautifully designed restaurant.</p>
+            <a href="about.html#restaurant-interior" class="block transition duration-300">
+              <h3 class="text-xl font-semibold">Restaurant Interior</h3>
+              <p class="mt-2">Relax in our beautifully designed restaurant.</p>
+            </a>
           </div>
         </div>
         <!-- Card 4 -->
-        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96 transform transition duration-300 hover:scale-105">
           <img src="./images/seafood1.webp" alt="Delicious seafood" class="w-full h-full object-cover">
           <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
-            <h3 class="text-xl font-semibold">Seafood Platter</h3>
-            <p class="mt-2">A variety of fresh seafood.</p>
+            <a href="about.html#seafood-platter" class="block transition duration-300">
+              <h3 class="text-xl font-semibold">Seafood Platter</h3>
+              <p class="mt-2">A variety of fresh seafood.</p>
+            </a>
           </div>
         </div>
         <!-- Card 5 -->
-        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96 transform transition duration-300 hover:scale-105">
           <img src="./images/seafood2.webp" alt="Restaurant interior" class="w-full h-full object-cover">
           <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
-            <h3 class="text-xl font-semibold">Gourmet Dishes</h3>
-            <p class="mt-2">Exquisite seafood dishes.</p>
+            <a href="about.html#gourmet-dishes" class="block transition duration-300">
+              <h3 class="text-xl font-semibold">Gourmet Dishes</h3>
+              <p class="mt-2">Exquisite seafood dishes.</p>
+            </a>
           </div>
         </div>
         <!-- Card 6 -->
-        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96 transform transition duration-300 hover:scale-105">
           <img src="./images/seafood1.webp" alt="Fresh seafood" class="w-full h-full object-cover">
           <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
-            <h3 class="text-xl font-semibold">Sustainable Seafood</h3>
-            <p class="mt-2">Responsibly sourced seafood.</p>
+            <a href="about.html#sustainable-seafood" class="block transition duration-300">
+              <h3 class="text-xl font-semibold">Sustainable Seafood</h3>
+              <p class="mt-2">Responsibly sourced seafood.</p>
+            </a>
           </div>
         </div>
         <!-- Card 7 -->
-        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96 transform transition duration-300 hover:scale-105">
           <img src="./images/seafood2.webp" alt="Delicious seafood" class="w-full h-full object-cover">
           <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
-            <h3 class="text-xl font-semibold">Family Friendly</h3>
-            <p class="mt-2">A great place for family gatherings.</p>
+            <a href="about.html#family-friendly" class="block transition duration-300">
+              <h3 class="text-xl font-semibold">Family Friendly</h3>
+              <p class="mt-2">A great place for family gatherings.</p>
+            </a>
           </div>
         </div>
         <!-- Card 8 -->
-        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96">
+        <div class="relative bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden w-72 h-96 transform transition duration-300 hover:scale-105">
           <img src="./images/seafood1.webp" alt="Restaurant interior" class="w-full h-full object-cover">
           <div class="absolute bottom-0 bg-black bg-opacity-50 text-white p-4 w-full">
-            <h3 class="text-xl font-semibold">Cozy Atmosphere</h3>
-            <p class="mt-2">Enjoy a cozy and welcoming environment.</p>
+            <a href="about.html#cozy-atmosphere" class="block transition duration-300">
+              <h3 class="text-xl font-semibold">Фомин Дмитрий - Шеф повар</h3>
+              <p class="mt-2">Enjoy a cozy and welcoming environment.</p>
+            </a>
           </div>
         </div>
-      </div>
-
-      <!-- Pagination -->
-      <div class="flex justify-center items-center mt-8 space-x-2">
-        <button id="prev" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
-          <i class='bx bx-chevron-left'></i>
-        </button>
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">1</button>
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">2</button>
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">3</button>
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">4</button>
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">5</button>
-        <button id="next" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
-          <i class='bx bx-chevron-right'></i>
-        </button>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
-  <footer class="bg-blue-600 text-white p-6 mx-4 mt-4 rounded-lg text-center dark:bg-blue-800">
-    <p>&copy; 2024 Seafood Restaurant</p>
-  </footer>
-
   <script src="./js/theme-switcher.js"></script>
-  <script src="./js/scroll.js"></script>
   <script src="./js/menu-toggle.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
